--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   },
   "homepage": "https://github.com/cajacko/cj-checklist#readme",
   "scripts": {
-    "start": "babel src --watch --out-dir dist --ignore *.test.js",
+    "start": "babel src --watch --out-dir dist --ignore __tests__",
     "checklist": "babel-node scripts/checklist.js",
     "test": "eslint src && jest --coverage && flow-check --skip-check",
     "jest:watch": "jest --watch --coverage",
-    "build": "babel src --out-dir dist --ignore *.test.js",
+    "build": "rimraf dist && babel src --out-dir dist --ignore __tests__",
     "publish": "npm run build && npm publish",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major"
   },
   "bin": {
-    "checklist": "node dist/bin.js"
+    "checklist": "dist/bin.js"
   },
   "engine": {
     "node": ">=6.9.1"
@@ -48,7 +48,8 @@
   "dependencies": {
     "app-root-path": "2.0.1",
     "fs-extra": "4.0.2",
-    "inquirer": "3.3.0"
+    "inquirer": "3.3.0",
+    "rimraf": "2.6.2"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
